[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lightningrobot"
version = "0.0.1"
requires-python = ">=3.8"
authors = [
  {name = "Zhihan", email = "zhihan2727@hotmail.com"}
]
description = "轻快，好用，基于Python的多平台机器人框架。"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["robot", "lightningrobot"]

[project.urls]
Homepage = "https://lightningrobot.github.io/"
Documentation = "https://lightningrobot.github.io/"
Repository = "https://github.com/LightningRobot/core.git"
"Bug Tracker" = "https://github.com/LightningRobot/core/issues"