[tool.poetry]
name = "lightningrobot"
version = "1.0.0"
description = "轻快，好用，基于Python的多平台机器人框架。"
authors = ["YeyingXingchen <yeyingxingchen@yeah.net>"]
readme = "README.md"
homepage = "https://lightningrobot.github.io/"
documentation = "https://lightningrobot.github.io/"
license = "MIT"
repository = "https://github.com/LightningRobot/core/"
keywords = ["robot", "lightningrobot"]

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
